Temporary fix for misaligned search box

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,3 +33,7 @@
 .navbar__title {
   overflow: visible;
 }
+
+.searchBox_dLyj {
+  padding: 0;
+}
